# kalman_filters

./: .gitignore  CMakeLists.txt  README.md  generate_poses.cpp  plot_trajectory.cpp
doc/: kf.gp
examples/: ekf_circle.cpp  kf.cpp
include/: kalman_filters.hpp
src/: kalman_filters.cpp
